@@ -1,3 +1,9 @@
+2009-07-21  Alexandre Ferrieux 	<ferrieux@users.sourceforge.net>
+
+	* generic/tkFont.c: Fix [Bug 2328657] by explicitly excluding
+	hacky zero-char chunks from intersection computation. Might
+	deserve generalization to other tests.
+
 2009-07-20  Donal K. Fellows  <dkf@users.sf.net>
 
 	* tests/clipboard.test (clipboard-6.2): [Bug 2824378]: Corrected
